[gd_scene load_steps=25 format=3 uid="uid://c1ol6fbevpt6j"]

[ext_resource type="Script" path="res://Scripts/dining_room.gd" id="1_4irug"]
[ext_resource type="Texture2D" uid="uid://dpw6ovkmuaql5" path="res://Assets/Manoir/DiningRoom/Fond.png" id="1_ikro6"]
[ext_resource type="PackedScene" uid="uid://co07lt5af6ilr" path="res://Scenes/bastian.tscn" id="2_3dxal"]
[ext_resource type="Texture2D" uid="uid://k05v6cbj4p4o" path="res://Assets/Manoir/DiningRoom/Table.png" id="2_kdp8k"]
[ext_resource type="PackedScene" uid="uid://cpuue2w0pfrd7" path="res://Scenes/nav.tscn" id="2_qndpv"]
[ext_resource type="Texture2D" uid="uid://q2r2dq6j8mq7" path="res://Assets/UI/window.png" id="2_xjteu"]
[ext_resource type="Theme" uid="uid://bo7i1yk8adk1i" path="res://Themes/nav_buttons.tres" id="3_yjv81"]
[ext_resource type="Texture2D" uid="uid://b3683kg8uy184" path="res://Assets/Manoir/DiningRoom/RideauBack1.png" id="5_mi64i"]
[ext_resource type="Texture2D" uid="uid://cxb0v5e5wqqvr" path="res://Assets/Manoir/DiningRoom/RideauBack2.png" id="6_y05qj"]
[ext_resource type="Texture2D" uid="uid://chwe7faj6fgq8" path="res://Assets/Manoir/DiningRoom/RideauBack3.png" id="7_6xfv5"]
[ext_resource type="Texture2D" uid="uid://ckeprflspnlvw" path="res://Assets/Manoir/DiningRoom/RideauFront1.png" id="8_et2i6"]
[ext_resource type="Texture2D" uid="uid://cx1hj81abfqth" path="res://Assets/Manoir/DiningRoom/RideauFront2.png" id="9_bgbix"]
[ext_resource type="Texture2D" uid="uid://cbiysh6xh30u3" path="res://Assets/Manoir/DiningRoom/RideauFront3.png" id="10_o6fvu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mt6ir"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bsct6"]
texture = ExtResource("2_xjteu")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r7wjn"]
texture = ExtResource("2_xjteu")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1nx7f"]
texture = ExtResource("2_xjteu")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4k31p"]
texture = ExtResource("2_xjteu")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p6dtr"]
texture = ExtResource("2_xjteu")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ao721"]
texture = ExtResource("2_xjteu")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_3ixed"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_o31ar"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o7rap"]
size = Vector2(69, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aro07"]
size = Vector2(51, 74)

[node name="DiningRoom" type="Node2D"]
y_sort_enabled = true
texture_filter = 1
script = ExtResource("1_4irug")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Nav" parent="CanvasLayer" instance=ExtResource("2_qndpv")]
z_index = 10
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 1
grow_vertical = 1

[node name="Control" type="Control" parent="."]
z_index = 2
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0
theme = ExtResource("3_yjv81")

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -35.0
offset_right = 115.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_mt6ir")

[node name="Panel" type="NinePatchRect" parent="Control/PanelContainer"]
layout_mode = 2
texture = ExtResource("2_xjteu")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Fermer la fenÃªtre ?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Button" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_focus_color = Color(0.933333, 0.611765, 0.192157, 1)
theme_override_font_sizes/font_size = 12
theme_override_styles/hover = SubResource("StyleBoxTexture_bsct6")
theme_override_styles/pressed = SubResource("StyleBoxTexture_r7wjn")
theme_override_styles/normal = SubResource("StyleBoxTexture_1nx7f")
text = "Oui"

[node name="Button2" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_focus_color = Color(0.933333, 0.611765, 0.192157, 1)
theme_override_font_sizes/font_size = 12
theme_override_styles/hover = SubResource("StyleBoxTexture_4k31p")
theme_override_styles/pressed = SubResource("StyleBoxTexture_p6dtr")
theme_override_styles/normal = SubResource("StyleBoxTexture_ao721")
text = "Non"

[node name="Fond" type="StaticBody2D" parent="."]

[node name="Fond" type="Sprite2D" parent="Fond"]
texture_filter = 1
position = Vector2(320, 180)
texture = ExtResource("1_ikro6")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Fond"]
polygon = PackedVector2Array(73, 0, 73, 151, 139, 151, 139, 142, 208, 142, 208, 151, 235, 151, 235, 181, 354, 181, 354, 151, 373, 151, 373, 156, 375, 161, 380, 167, 387, 173, 395, 174, 395, 175, 402, 175, 402, 174, 497, 174, 497, 175, 503, 175, 503, 174, 507, 174, 516, 170, 522, 162, 525, 156, 525, 151, 547, 151, 547, 223, 567, 223, 567, 274, 547, 274, 547, 360, 575, 360, 575, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fond"]
position = Vector2(240, 361)
shape = SubResource("WorldBoundaryShape2D_3ixed")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Fond"]
position = Vector2(82, 192)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_o31ar")

[node name="Table" type="StaticBody2D" parent="."]
texture_filter = 1
position = Vector2(310, 214)

[node name="Table2" type="Sprite2D" parent="Table"]
position = Vector2(0, 75)
texture = ExtResource("2_kdp8k")
offset = Vector2(0, -60)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Table"]
position = Vector2(-310, -214)
polygon = PackedVector2Array(199, 222, 199, 244, 206, 251, 206, 287, 236, 287, 236, 305, 267, 305, 267, 287, 298, 287, 298, 297, 329, 297, 329, 287, 354, 287, 354, 297, 385, 297, 385, 287, 414, 287, 414, 251, 421, 244, 421, 222, 384, 222, 384, 213, 353, 213, 353, 222, 325, 222, 325, 213, 294, 213, 294, 222, 260, 222, 260, 213, 229, 213, 229, 222)

[node name="PorteCuisine" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PorteCuisine"]
position = Vector2(173.5, 145.5)
shape = SubResource("RectangleShape2D_o7rap")

[node name="Fenetre" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fenetre"]
position = Vector2(98.5, 252)
shape = SubResource("RectangleShape2D_aro07")

[node name="RideauBack1" type="StaticBody2D" parent="."]
position = Vector2(93.5, 193)

[node name="Sprite2D" type="Sprite2D" parent="RideauBack1"]
position = Vector2(0, -86)
texture = ExtResource("5_mi64i")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RideauBack1"]
position = Vector2(-0.5, 8)
polygon = PackedVector2Array(-20, 15, 21, -12, 21, -15, 18, -15, -20, 11)

[node name="RideauBack2" type="Node2D" parent="."]
visible = false
position = Vector2(97, 193)

[node name="Sprite2D" type="Sprite2D" parent="RideauBack2"]
position = Vector2(0, -86)
texture = ExtResource("6_y05qj")

[node name="RideauBack3" type="Node2D" parent="."]
visible = false
position = Vector2(93.5, 204)

[node name="Sprite2D" type="Sprite2D" parent="RideauBack3"]
position = Vector2(0, -86)
texture = ExtResource("7_6xfv5")

[node name="RideauFront1" type="StaticBody2D" parent="."]
position = Vector2(93.5, 313)

[node name="Sprite2D" type="Sprite2D" parent="RideauFront1"]
position = Vector2(0, -145)
texture = ExtResource("8_et2i6")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RideauFront1"]
position = Vector2(-0.5, -43)
polygon = PackedVector2Array(-20, 25, 21, 53, 21, 48, -19, 20, -20, 21)

[node name="RideauFront2" type="Node2D" parent="."]
visible = false
position = Vector2(97, 254)

[node name="Sprite2D" type="Sprite2D" parent="RideauFront2"]
position = Vector2(0, -86)
texture = ExtResource("9_bgbix")

[node name="RideauFront3" type="Node2D" parent="."]
visible = false
position = Vector2(97, 273)

[node name="Sprite2D" type="Sprite2D" parent="RideauFront3"]
position = Vector2(-3.5, -105)
texture = ExtResource("10_o6fvu")

[node name="Bastian" parent="." instance=ExtResource("2_3dxal")]
position = Vector2(518, 243)

[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="body_entered" from="PorteCuisine" to="." method="_on_porte_cuisine_body_entered"]
[connection signal="body_exited" from="PorteCuisine" to="." method="_on_porte_cuisine_body_exited"]
[connection signal="body_entered" from="Fenetre" to="." method="_on_fenetre_body_entered"]
[connection signal="body_exited" from="Fenetre" to="." method="_on_fenetre_body_exited"]
[connection signal="input_event" from="Fenetre" to="." method="_on_porte_cuisine_input_event"]
